--- a/gallerie_lutteur.html
+++ b/gallerie_lutteur.html
@@ -11,13 +11,12 @@
 <header>
         <nav>
             <ul>
-                <li><a href="#">Link </a></li>
-                <li><a href="#">Link </a></li>
-                <li><a href="#">Link </a></li>
-                <li><a href="#"><img src="Image/logo-solo.png" height="100" width="200"></a> </li>
-                <li><a href="#">Link </a></li>
-                <li><a href="#">Link </a></li>
-                <li><a href="#">Link </a></li>
+
+                <li><a href="gallerie_lutteur.html">Luchadores</a></li>
+                <li><a href="Events.html">Eventos</a></li>
+                <li><a href="Index.html"><img src="Image/logo-solo.png" height="150" width="250"></a>/li>
+                <li><a href="contacts.html">Contacto</a></li>
+                <li><a href="#">Info</a></li>
             </ul>
         </nav>
     </header>
@@ -75,12 +74,11 @@
 <footer>
     <nav>
         <ul>
-            <li><a href="#">Link </a></li>
-            <li><a href="#">Link </a></li>
-            <li><a href="#">Link </a></li>
-            <li><a href="#">Link </a></li>
-            <li><a href="#">Link </a></li>
-            <li><a href="#">Link </a></li>
+            <li><a href="gallerie_lutteur.html">Luchadores</a></li>
+            <li><a href="Events.html">Eventos</a></li>
+            <li><a href="Index.html">Index</a></li>
+            <li><a href="contacts.html">Contacto</a></li>
+            <li><a href="#">Info</a></li>
         </ul>
     </nav>
 
