--- a/Events.html
+++ b/Events.html
@@ -7,6 +7,19 @@
 
 </head>
 <body id="Events">
+<header>
+    <nav>
+        <ul>
+
+            <li><a href="gallerie_lutteur.html">Luchadores</a></li>
+            <li><a href="Events.html">Eventos</a></li>
+            <li><a href="Index.html"><img src="Image/logo-solo.png" height="150" width="250"></a>/li>
+            <li><a href="contacts.html">Contacto</a></li>
+            <li><a href="#">Info</a></li>
+
+        </ul>
+    </nav>
+</header>
 <main>
                                        <!--premier tableau de la page events-->
 <!-- Table header -->
@@ -109,5 +122,18 @@
     </tbody>
 </table>
 </main>
+
+<footer>
+    <nav>
+        <ul>
+            <li><a href="gallerie_lutteur.html">Luchadores</a></li>
+            <li><a href="Events.html">Eventos</a></li>
+            <li><a href="Index.html">Index</a></li>
+            <li><a href="contacts.html">Contacto</a></li>
+            <li><a href="#">Info</a></li>
+        </ul>
+    </nav>
+
+</footer>
 </body>
 </html>
