--- a/Index.html
+++ b/Index.html
@@ -12,13 +12,11 @@
     <nav>
 
         <ul>
-            <li><a href="#">Link </a></li>
-            <li><a href="#">Link </a></li>
-            <li><a href="#">Link </a></li>
-            <li><a href="#"><img src="Image/logo-solo.png" height="100" width="200"></a> </li>
-            <li><a href="#">Link </a></li>
-            <li><a href="#">Link </a></li>
-            <li><a href="#">Link </a></li>
+            <li><a href="gallerie_lutteur.html">Luchadores</a></li>
+            <li><a href="Events.html">Eventos</a></li>
+            <li><a href="Index.html"><img src="Image/logo-solo.png" height="150" width="250"></a>/li>
+            <li><a href="contacts.html">Contacto</a></li>
+            <li><a href="#">Info</a></li>
         </ul>
     </nav>
 </header>
@@ -71,12 +69,12 @@
     <footer>
         <nav>
             <ul>
-                <li><a href="#">Link </a></li>
-                <li><a href="#">Link </a></li>
-                <li><a href="#">Link </a></li>
-                <li><a href="#">Link </a></li>
-                <li><a href="#">Link </a></li>
-                <li><a href="#">Link </a></li>
+                <li><a href="gallerie_lutteur.html">Luchadores</a></li>
+                <li><a href="Events.html">Eventos</a></li>
+                <li><a href="Index.html">Index</a></li>
+                <li><a href="contacts.html">Contacto</a></li>
+                <li><a href="#">Info</a></li>
+
             </ul>
         </nav>
 
