--- a/contacts.html
+++ b/contacts.html
@@ -12,13 +12,12 @@
         <nav>
 
             <ul>
-                <li><a href="#">Link </a></li>
-                <li><a href="#">Link </a></li>
-                <li><a href="#">Link </a></li>
-                <li><a href="#"><img src="Image/logo-solo.png" height="100" width="200"></a> </li>
-                <li><a href="#">Link </a></li>
-                <li><a href="#">Link </a></li>
-                <li><a href="#">Link </a></li>
+                <li><a href="gallerie_lutteur.html">Luchadores</a></li>
+                <li><a href="Events.html">Eventos</a></li>
+                <li><a href="Index.html"><img src="Image/logo-solo.png" height="150" width="250"></a>/li>
+                <li><a href="contacts.html">Contacto</a></li>
+                <li><a href="#">Info</a></li>
+
             </ul>
         </nav>
     </header>
@@ -113,6 +112,19 @@
                 <p>Contacts</p>
             </aside>
         </main>
+
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="gallerie_lutteur.html">Luchadores</a></li>
+                <li><a href="Events.html">Eventos</a></li>
+                <li><a href="Index.html">Index</a></li>
+                <li><a href="contacts.html">Contacto</a></li>
+                <li><a href="#">Info</a></li>
+            </ul>
+        </nav>
+
+    </footer>
 
     </body>
 </html>
