--- a/Events.html
+++ b/Events.html
@@ -24,7 +24,7 @@
                                        <!--premier tableau de la page events-->
 <!-- Table header -->
 <table class="group">
-    <caption>Maint Event Of the month</caption>
+    <caption>Principal Evento del Mes</caption>
 <thead>
 <tr>
     <th scope="col" ><p>Masked Mania</p></th>
@@ -33,7 +33,7 @@
 <!-- Table footer -->
 <tfoot>
 <tr>
-    <td><p><a href="Index.html">Watch Extrait Video</a></p></td>
+    <td><p><a href="Index.html">Ver el Video</a></p></td>
 </tr>
 </tfoot>
 <!-- Table body -->
@@ -49,7 +49,7 @@
                                        <!----------------------------premier tableau de la page events------------------------>
 
                                        <table class="group">
-    <caption>Maint Event Of the month</caption>
+    <caption>Principal Evento del Mes</caption>
     <thead>
     <tr>
         <th scope="col" ><p>Lucha Underground</p></th>
@@ -58,7 +58,7 @@
     <!-- Table footer -->
     <tfoot>
     <tr>
-        <td><p><a href="Index.html">Watch Extrait Video</a></p></td>
+        <td><p><a href="Index.html">Ver el Video</a></p></td>
     </tr>
     </tfoot>
     <!-- Table body -->
@@ -74,7 +74,7 @@
                                        <!---------------------------premier tableau de la page events--------------------->
 
                                        <table class="group">
-    <caption>Maint Event Of the month</caption>
+    <caption>Principal Evento del Mes</caption>
     <thead>
     <tr>
         <th scope="col" ><p>Full Contact Wrestling</p></th>
@@ -83,7 +83,7 @@
     <!-- Table footer -->
     <tfoot>
     <tr>
-        <td><p><a href="Index.html">Watch Extrait Video</a></p></td>
+        <td><p><a href="Index.html">Ver el Video</a></p></td>
     </tr>
     </tfoot>
     <!-- Table body -->
@@ -99,7 +99,7 @@
                                        <!-------------------premier tableau de la page events--------------------------->
 
                                        <table class="group">
-    <caption>Maint Event Of the month</caption>
+    <caption>Principal Evento del Mes</caption>
     <thead>
     <tr>
         <th scope="col" ><p>Steel Cage</p></th>
@@ -108,7 +108,7 @@
     <!-- Table footer -->
     <tfoot>
     <tr>
-        <td><p><a href="Index.html">Watch Extrait Video</a></p></td>
+        <td><p><a href="Index.html">Ver el Video</a></p></td>
     </tr>
     </tfoot>
     <!-- Table body -->
