--- a/details_luchador_1.html
+++ b/details_luchador_1.html
@@ -67,6 +67,7 @@
             <li><a href="https://twitter.com/?lang=fr"><img src="image/twitter.png" alt="twitter"/></a></li>
         </ul>
     </nav>
+    <audio autoplay src="music/voice1.wav"/>
 
 </footer>
 </body>
