--- a/details_luchador_2.html
+++ b/details_luchador_2.html
@@ -65,6 +65,7 @@
             <li><a href="https://twitter.com/?lang=fr"><img src="image/twitter.png" alt="twitter"/></a></li>
         </ul>
     </nav>
+    <audio autoplay src="music/voice2.wav"/>
 
 </footer>
 
