--- a/details_luchador_6.html
+++ b/details_luchador_6.html
@@ -44,7 +44,7 @@
         </article>
     </section>
 
-    <audio autoplay loop src="music/" loop/>
+    <audio autoplay src="music/voice6.wav" />
 
 </main>
 
