--- a/Events.html
+++ b/Events.html
@@ -67,7 +67,7 @@
         <td><img src="Image/HWP-11-9-14-flyer.jpg" alt="Masked Mania"></td>
     </tr>
     <tr>
-        <td><p>La historia de la Lucha mexicana está entrelazada  de México, los medios de comunicación y el entretenimiento en general. Su siguiente, en México se ha convertido en el deporte más popular después del fútbol en un país de 100 millones de personas.</p></td>
+        <td><p>La historia de la Lucha mexicana está entrelazada  de México, los medios de comunicación y el entretenimiento en general. Su siguiente, en México se ha convertido en el deporte más popular después del fútbol en un país .</p></td>
     </tr>
     </tbody>
 </table>
@@ -92,7 +92,7 @@
         <td><img src="Image/FCW-LA.jpg" alt="Masked Mania" ></td>
     </tr>
     <tr>
-        <td><p>Lucha Underground introduce público estadounidense a los de alto vuelo se mueve, explosivos de la lucha libre. Una antigua tradición de combate, ver como el bien y el mal hacer la guerra en un campo de batalla valiente llamado "El Templo".</p></td>
+        <td><p>público estadounidense a los de alto vuelo se mueve, explosivos de la lucha libre. Una antigua tradición de combate, ver como el bien y el mal hacer la guerra en un campo de batalla valiente llamado "El Templo".</p></td>
     </tr>
     </tbody>
 </table>
@@ -117,7 +117,7 @@
         <td><img src="Image/lucha-libre-pro-wrestling-11.14.15.jpg" alt="Masked Mania" ></td>
     </tr>
     <tr>
-        <td><p>No hay nada como la noche del viernes noche de la pelea en la Arena México. Este local de larga data en el centro de Ciudad de México es el lugar para ver uno de los eventos deportivos más estridentes y dramáticos del país, la lucha libre.</p></td>
+        <td><p> del viernes noche de la pelea en la Arena México. Este local de larga data en el centro de Ciudad de México es el lugar para ver uno de los eventos deportivos más estridentes y dramáticos del país, la lucha libre.</p></td>
     </tr>
     </tbody>
 </table>
