--- a/gallerie_lutteur.html
+++ b/gallerie_lutteur.html
@@ -20,7 +20,7 @@
         </nav>
         <a href="Index.html"><img src="Image/logo-solo.png" height="150" width="250"></a>
     </header>
-
+/*------------------------------display des lutteurs---------------------------------*/
 <main id="luchador">
 
     <h1>LA GALLERIA DE LOS LUCHADORES</h1>
@@ -66,10 +66,10 @@
     </li>
 
      </ul>
-
+/*--------banniere a gauche---------------------------*/
     <p>LUCHADORES</p>
 
-    <audio autoplay loop src="music/something%20special.wav" loop/>
+
 
 
 
