--- a/details_luchador_1.html
+++ b/details_luchador_1.html
@@ -27,7 +27,8 @@
 </header>
 
 <main id="details">
-    <section>
+    <div id="luch-info">
+    <section >
 
      <figure>
          <figcaption>STUKA EL GALLO</figcaption>
@@ -43,6 +44,7 @@
            <meter value="3" min="0" max="4" low="1" high="3"></meter>
        </article>
     </section>
+    </div>
 
     <audio autoplay loop src="music/" loop/>
 
