--- a/details_luchador_3.html
+++ b/details_luchador_3.html
@@ -26,6 +26,7 @@
 </header>
 
 <main id="details">
+    <div id="luch-info">
     <section>
 
         <figure>
@@ -42,6 +43,7 @@
             <meter value="3" min="0" max="4" low="1" high="3"></meter>
         </article>
     </section>
+    </div>
 
     <audio autoplay loop src="music/" loop/>
 
