--- a/details_luchador_6.html
+++ b/details_luchador_6.html
@@ -27,6 +27,7 @@
 </header>
 
 <main id="details">
+    <div id="luch-info">
     <section>
 
         <figure>
@@ -43,6 +44,7 @@
             <meter value="5" min="0" max="5" low="1" high="3"></meter>
         </article>
     </section>
+    </div>
 
     <audio autoplay src="music/voice6.wav" />
 
