--- a/details_luchador_2.html
+++ b/details_luchador_2.html
@@ -25,6 +25,7 @@
 </header>
 
 <main id="details">
+    <div id="luch-info">
     <section>
 
         <figure>
@@ -41,6 +42,7 @@
             <meter value="3" min="0" max="4" low="1" high="3"></meter>
         </article>
     </section>
+    </div>
 
     <audio autoplay loop src="music/" loop/>
 
