--- a/details_luchador_5.html
+++ b/details_luchador_5.html
@@ -26,6 +26,7 @@
 </header>
 
 <main id="details">
+    <div id="luch-info">
     <section>
 
         <figure>
@@ -41,7 +42,8 @@
             <p>Victorias: 22</p>
             <meter value="3" min="0" max="5" low="1" high="3"></meter>
         </article>
-    </section>
+    </section><
+    </div>
 
     <audio autoplay loop src="music/" loop/>
 
