--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
             <li><a href="gallerie_lutteur.html">Luchadores</a></li>
             <li><a href="Events.html">Eventos</a></li>
             <li><a href="contacts.html">Contacto</a></li>
-            <li><a href="produits.html">Info</a></li>
+            <li><a href="infos.html">Info</a></li>
         </ul>
     </nav>
     <a href="Index.html"><img src="Image/logo-solo.png" height="150" width="250"></a>
