--- a/details_luchador_4.html
+++ b/details_luchador_4.html
@@ -58,7 +58,7 @@
             <li><a href="Events.html">Eventos</a></li>
             <li><a href="Index.html">Index</a></li>
             <li><a href="contacts.html">Contacto</a></li>
-            <li><a href="produits.html">Info</a></li>
+            <li><a href="infos.html">Info</a></li>
 
         </ul>
 
