--- a/details_luchador_6.html
+++ b/details_luchador_6.html
@@ -17,7 +17,7 @@
             <li><a href="gallerie_lutteur.html">Luchadores</a></li>
             <li><a href="Events.html">Eventos</a></li>
             <li><a href="contacts.html">Contacto</a></li>
-            <li><a href="produits.html">Info</a></li>
+            <li><a href="infos.html">Info</a></li>
 
         </ul>
     </nav>
